# libdetectability

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
libdetectability/: __init__.py  bark_as_freq.py  centre_frequency.py  detectability.py  detectability_loss.py  erb_as_freq.py  freq_as_erb.py  gammatone_filterbank.py  outer_middle_ear_filter.py  segmentedDetectability.py  segmented_detectability.py  test.py  testSegmenterDetectability.py  test_outer_middle_ear_filter.py  threshold_in_quiet.py
libdetectability/experimental/: detectability_loss_l1_det_tf.py  detectability_loss_l1_det_torch.py
libdetectability/internal/: centre_frequency.py  erbs_as_freq.py  freq_as_bark.py  freq_as_erbs.py  gammatone_filterbank.py  outer_middle_ear_filter.py  threshold_in_quiet.py  threshold_in_quiet_db.py
libdetectability/test/: test_gammatone_filterbank.py  test_outer_middle_ear_filter.py  test_threshold_in_quiet.py  test_threshold_in_quiet_db.py
src/libdetectability/: __init__.py  detectability.py  segmented_detectability.py  test.py
src/libdetectability/experimental/: detectability_loss_l1_det_torch.py
src/libdetectability/internal/: centre_frequency.py  outer_middle_ear_filter.py  threshold_in_quiet.py  threshold_in_quiet_db.py
test/: detectability_loss_l1_det_test.py  test_threshold_in_quiet.py  test_threshold_in_quiet_db.py
validation/: README.md  test_gammatone_filterbank.py  test_outer_middle_ear_filter.py  test_threshold_in_quiet.py  test_threshold_in_quiet_db.py
