[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libdetectability"
version = "0.8.0"
description = "A library for detectability calculations"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "Specify your license here"}
dependencies = [
    "pytest",
    "numpy",
    "scipy",
    "torch",
    "libsegmenter"
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.0"]

[tool.setuptools.packages.find]
include = ["libdetectability"]

[tool.pytest.ini_options]
testpaths = ["test"]

