[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libdetectability"
version = "0.8.1"
description = "A library for detectability calculations"
authors = [
    {name = "Niels de Koeijer", email = "NEMK@bang-olufsen.dk"}
]
license = {text = "MIT"}
dependencies = [
    "pytest",
    "numpy",
    "scipy",
    "torch",
    "libsegmenter",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.0"]

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libdetectability"]

